2007-10-14  Peter Kasting  <zerodpx@gmail.com>

Reviewed by Maciej.

        http://bugs.webkit.org/show_bug.cgi?id=15210
        Draw the image outline even for broken images.

        * rendering/RenderImage.cpp:
        (WebCore::RenderImage::paint):


Canonical link: https://commits.webkit.org/20570@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@26591 268f45cc-cd09-0410-ab3c-d52691b4dbfc